# ChangeLog for x11-misc/lightdm
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-misc/lightdm/ChangeLog,v 1.95 2014/11/08 13:50:08 hwoarang Exp $

*lightdm-1.10.3 (08 Nov 2014)
*lightdm-1.12.1 (08 Nov 2014)

  08 Nov 2014; Markos Chandras <hwoarang@gentoo.org> +lightdm-1.10.3.ebuild,
  +lightdm-1.12.1.ebuild, -lightdm-1.10.0.ebuild, -lightdm-1.10.1.ebuild,
  -lightdm-1.4.0-r2.ebuild, -lightdm-1.4.3.ebuild, -lightdm-1.8.5-r1.ebuild,
  -lightdm-1.9.15.ebuild:
  Version bump. Create /var/lib/lightdm-data. Bug 522228

*lightdm-1.11.9 (14 Sep 2014)

  14 Sep 2014; Markos Chandras <hwoarang@gentoo.org> +lightdm-1.11.9.ebuild,
  -lightdm-1.11.8.ebuild:
  Version bump

*lightdm-1.11.8 (07 Sep 2014)

  07 Sep 2014; Markos Chandras <hwoarang@gentoo.org> +lightdm-1.11.8.ebuild,
  -lightdm-1.11.4.ebuild:
  Version bump

*lightdm-1.11.4 (19 Jul 2014)

  19 Jul 2014; Markos Chandras <hwoarang@gentoo.org> +lightdm-1.11.4.ebuild,
  -lightdm-1.11.2.ebuild:
  Version bump. drop old

*lightdm-1.11.2 (16 May 2014)

  16 May 2014; Markos Chandras <hwoarang@gentoo.org> +lightdm-1.11.2.ebuild:
  Version bump

*lightdm-1.10.1 (10 May 2014)

  10 May 2014; Markos Chandras <hwoarang@gentoo.org> +lightdm-1.10.1.ebuild:
  Version bump

*lightdm-1.4.0-r2 (20 Apr 2014)

  20 Apr 2014; Markos Chandras <hwoarang@gentoo.org> +lightdm-1.4.0-r2.ebuild,
  lightdm-1.4.3.ebuild:
  Restore stable 1.4.X per #507358

*lightdm-1.4.3 (20 Apr 2014)

  20 Apr 2014; Markos Chandras <hwoarang@gentoo.org> +lightdm-1.4.3.ebuild:
  Restore 1.4.X per #507358

  11 Apr 2014; Patrick Lauer <patrick@gentoo.org> metadata.xml:
  Remove unneeded useflag descriptions from metadata.xml

  10 Apr 2014; Markos Chandras <hwoarang@gentoo.org> -lightdm-1.0.11.ebuild,
  -lightdm-1.2.2-r3.ebuild, -lightdm-1.4.0-r2.ebuild, -lightdm-1.4.0.ebuild,
  -lightdm-1.4.3.ebuild, -lightdm-1.6.2.ebuild:
  Remove old ebuilds
