@@ -14,28 +14,28 @@ DIST lightdm-1.10.3.tar.xz 469992 SHA256 1e31b99eba6626ed46b7940cd53cbd585fa53a4
 DIST lightdm-1.11.9.tar.xz 474928 SHA256 a6047c773cb7341e28385d807fd1cd1adb356c7fee0d559e7c9fd6c3c9cb934c SHA512 a0c194d36cdf257352f4e2653bd9ebf4963ce4462fd235b7d8b4bd3110637c4b154cb37dd4559c16f0713fa43a9d49416a74b1827b5eb9eb9014801e7856f2d7 WHIRLPOOL 090f73362625625b1b50be38a58c3ffa4bc9a3ee97e1c36c973a0e98c03ade34fb6f0b492904e795ec2b30da0d52c5432e70e57e736b8674aa7b426ee7c327bf
 DIST lightdm-1.12.1.tar.xz 473012 SHA256 55fc6ed30681d0d4c60ae3d2760c54ed74096632ca777f8cab5c072ef8f35b1b SHA512 c6efc7239fcd373006fe2adc1a9f545f8b3ff8163d5a37e76b37bb3f0804be74d0c66f821b2be39f1cba00318e540f91d6188a15f112fda2c6f8dcb0ca3eef06 WHIRLPOOL 5370203f719fb17a22119a25199500841a49f790e055966790930ac0be805c4316c775756467f9d44f25fd522b50163f91fc26d89b164ace0be9b5e03937c760
 DIST lightdm-1.8.5.tar.xz 449024 SHA256 c1a55800628c7a683a529e32646eae4be32295a09af049c9b15387acff0232a2 SHA512 a3941560abe402b07e5595a6fb6bcbd9df36f775b07ac23c526a14c25c1bc2e9ce4e2f912354446111f58499d9df92c650b44b05dbd1e49b5207722d5bf7985f WHIRLPOOL aabc3adf3412b92b235fc8c2674d6807d5bf5c0714a73ac62b558decf779f98a5fbf9151ec00498c4ef3032b153d7735ca216d9451fdd11924f72dab77e7f4ef
-EBUILD lightdm-1.10.3.ebuild 3333 SHA256 f9c681a23ad57558234bab24407c57d35cdb5347d7227f58c1ade320c575e1a2 SHA512 4375be68572ec5d2bfa471dcc69e255ca1a69bb1b93180bc56fc2ec90adcdc7bff7c1b9c77deb8dc117b2a3f09cd9cba4694d7ebc389fad0c89c1c3e0a9fa228 WHIRLPOOL 9fd114c51bf842add2d8dd877dc4e26b2a7a1931de71462d271c51d13d990539c4326c26ed11324e9265fc0a27824df8cc1090b2cbca5611fb5b1f03b8c3a8a8
-EBUILD lightdm-1.11.9.ebuild 3375 SHA256 70a203723253bb0e36617d97ef57597f0ccd7e1396e692da87b435c2559973c2 SHA512 43e624476a3ad269194efa8664b25d29eb5ed978da54763e32c25485dcb1bb984f4e5fbffedbd622435988509ebe4df81c1b9db050a7d32538168d2de30785a7 WHIRLPOOL 1719ecca41513e1011aca90486b6f3751515895b8c4b9f3e2ee0eceaac7d5bcb62f7a324bb911fa99e21fbf9bebbf101e9b9e49030fcabdb167b71688eaaff6f
-EBUILD lightdm-1.12.1.ebuild 3458 SHA256 afcb4eca8602582ce908795afb7d38091c7da398a9e775be5ae3ddf79b7cb161 SHA512 8f0d47bf8900c2e5ed11a99ef74fd762a407a81a590f9f38c19834d7f8dba89a719a54da87e641a7eeb029ca95095dc4ef190e945cd2268ca9e405e80c20d01a WHIRLPOOL f86154d479867b232d9cb7fe60df3efee5a9802bd818f56f8fbb06ad3560e4879da1beff9ec5d3c2812868d670534763f87c0ba13c45df6db7093634888f7936
+EBUILD lightdm-1.10.3.ebuild 3272 SHA256 44be2d842f16b5f9af6a64f39ce31a5c5864737d4bf686c15fca060ba048c43f SHA512 7a7c77985e91c98e797cacb0fa4a2c668aea60c3e51d2d0e308d3ce2c5eceb8c9c115a3e309fbd3b8ff15ef4ba52c9a65a5cd9e6b0e598c67c1ba3e26d57e8de WHIRLPOOL 15aa2c79acea76b0563d47f2c37c4877c96a161d52a3f99a4afbf99474471ce27345185130c712fef5ce4c401e3fd3b75ad58b9e94b3d2a5cc55bd447e6b3ed1
+EBUILD lightdm-1.11.9.ebuild 3314 SHA256 d751381830378f07e3fb7d7e6234d86579bfffcfbb8102698f991d3f64e30317 SHA512 e765213e7badfd1b100f91990846afc2d9af1acfc4bcfd454c527d1e4d709882a71348030582418733b8c4b44a463ccf4ee79845dcfea96555c81008d5f95998 WHIRLPOOL 7ed10fdbfc8c9d3e31974063c15befd2c0646d534022124f39dfd06fd4b2b26e013b7d89c3f63481c369fb4037859cb7aba0bfc90c8b44f94766a9651f1406e4
+EBUILD lightdm-1.12.1.ebuild 3397 SHA256 2a5366dfbff1bba49e7942277cd80b81d2594ce80baafc36234cf82db529f836 SHA512 5b2e92555a4b4fd132c3bf36c0f66a672c3aae8ada197ee6355f97ef90b327917694ac4311688e7a4ab55049ca07edf5b2d7cb67b399602eea8d2f4f517eb5a2 WHIRLPOOL af111aecc189aaae035c5d40f533ee3ee8d61de44547fd7acb0471adb47e84fef81396319462ed3c295d3cdfdf7898b248152c1c37f3ae7c7f781ddbbaed0608
 EBUILD lightdm-1.8.5.ebuild 2803 SHA256 8f9329140c76835a3450966fce40e4def32ebf0ef81f8a79ce78a6723d6a3e3d SHA512 3cf035301b67292dddba3bfa1e348f72044da8f1cd87171bec2f44da64e17aa625be8a0e5540b184f3464d4a0e305c06f9c4c7c44d627cfc013ccc02d6c5e4a4 WHIRLPOOL b8c42bf4ea1d8f9f2e0c282778a84532060ce481d679c56e9d8facde20a6d0462e8b5385f9571ae9dec4fbb1bbdebf81faddb92d51ba099b2c44644328a0d1f4
-MISC ChangeLog 15767 SHA256 62515ec62cd942d45c6611f8b5bbd77b92d6ba467b2b60349224ddfeb44b7f8b SHA512 2ed3599be97a30a9cf74c9f91862e635494c49f715a5ebb482cce8607d8e4d58d927eaf5a0adea22af44f7482713ceef67cb6b50e37dc0b57efe7daa8c30e4e8 WHIRLPOOL e1f16d96b043ccc23f33e902b2fedfc5e6bf7f02f421542eae843d1be2b5b9319c9ddd7c5221f6023c721d97b05f963fe5af2d0463a770eb412f3a8ca39a6b02
+MISC ChangeLog 15990 SHA256 b8675f236ce7fdee7b51ffca9c575027c95a19724ce925963fa6b249197544bd SHA512 894472bcdf134bcedd0b20a3bd87825ff2461e0a43e2b149f61f5bf3e4a6286e4db0b0498337ba5bc45ecf26b8660bd1254d9907f9be8915a92503d7733450c0 WHIRLPOOL d52019f8310fce20885975ac3a0d000058c9544ab0b2fcbd511722b4ba5af5a728b0f3f2cb1580692e1936675c362f29d80713da3046bc5f2338b6fd592b3f63
 MISC metadata.xml 534 SHA256 cc20c58e04e520dc9e21c7a75d92e2714d94b1c1cdfddc94e8694c40af0d9597 SHA512 141fa9fde06c409a2d5ab3bc2f91c6d0a61568e1e94cdc417e530124487ef9f51141eeb74bc6e9ff957ae0f1f166a799634fca5a99995fdec920c3c858300863 WHIRLPOOL ff63e4220de78992417e5f8ecbe5b00b90f54a98bcd8c0dd6c9025db749213534a0b3e79d51a8f958f463726efee952eb8c31d2a161a77637f5eb6fd565f66c1
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQJ8BAEBCABmBQJUXh+RXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+iQJ8BAEBCABmBQJUXnaQXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
 ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQzNTVDNDczOUYzRjJEMTRGNDRGMzU2RkMw
-OUJGNEY1NEMyQkE3RjNDAAoJEAm/T1TCun8804sP/RKygH3TpxhAw7iWCSA+monn
-upjtTbNSsdv2NiL+xWnZ6wFYzYoxCbyA+NcnXMHTBSuyYyJIkwGmHSvlYjhr/Ff5
-j0WKatPfCthAU8w910dOGyyh73JzJpyGtLZFaeWg+sZvo0DmHsRdDTtYwU657aQZ
-MLmu6cM/ypxShYRKTYrPSdTgVjKQmB5bJ6OIUxfwB8nXT6EtHKBAbWeZdfEVXnJ8
-+jR32LnzozBu3+abhZNeSLtEkwwAGvtzSDDxlV2+tEYwrX7/buZu8LEqyw/wmD+5
-6qFWl7/sqYSwQTyIcU8vD5RoMX80B5tAATLDeOmbu+iQRBjL9eKVxwCHko9MoAoB
-oqJyoQjNBhmXhvIU4g4A5zQjzSeMWPhatp2G68wpD+iCSz7eCsYA6V9YwqBUPpfa
-eC52ldUbgqIgUWJRcUCPgUxSFhvcyn2go6RO2pTQvm5ONtO13NSfKyQ9FeD5X5ZM
-urXI/WjZ7FtSzAxuhNLJu8o6ih/5OluIcOZIAf9kegpQYWBo4W0ZM4bRJLu/GuL/
-9+feFbwCrDxjVMJuvWN9MxtqvbRI4YAuzCMnz/i1S0fn7Yh27DpHfJDLJN6BfSGJ
-o6Axv42tVPzp+7qZ0g8oUsRYMUNKcXDD15RVT8ys6xkT7qPQ8PTjxTnaegBC5QpG
-CnnvYZbV1K4kbdKoWaQ8
-=lZiT
+OUJGNEY1NEMyQkE3RjNDAAoJEAm/T1TCun8817AQAKyI/MFTGLdQ7U7xJRG14SXf
+UhKDnGwg0kB/xX79EFuTxeJVLraMNWKFuQr7QobURey+aeiRnEVAYdI7LPDNTazX
+E5d7qoSk/AkXEd0/KiLUIt89ohRdTsvI7GUmdDj6yYwA+94bYU+11OhLMrYFlAzI
+oWJlZ0K3NIM86BSBqtT2Tu+O2WjjrTMTI4IkNXUC+RjATw/tN75Pr1j6LkfBk/Km
+iOY4T5rLC7nQ8H5QcNPu+0NDUuczYOCvVRpVdojHtkn7k4Jhcy2GzLyq1DorajSu
+P4/fxbHKWOqVGQW5EvVv3uIcGN8SGzQeGykjoYDi21Pc1w2+ev5DXPpxrv2yeKLn
+uy6PjVqyiY57ZeBlGC2QePTBscitiH5MHaq1Ow6RC4R681GoTsa937JgJ1oiEPCi
+HrTL4XKP5No1JeYhm3thR8uaOLyjt2OYyFQII8cc/pyyVprWjzhnSySftFwya0Y8
+bhAtyLjjWeiOpEA5iTnE0X1zwO4Q7mK/caju+pUZwWPdamiXrHwBak83QBwm3zac
+E4sSBtA/UPPeUJ0P3eVWyOfX8ZwDuZpUiovDdlai1y0XkSLJ/vqYrA6i4pU5GJrk
+UWnrYnFI/YRpx/ECeUZwgVnASb/BhIqZtLrn/rVj/IoycoxTa+I1+3DCnENrAI+9
+Kp9XrDpTFYx0N815wfaL
+=HZ0t
 -----END PGP SIGNATURE-----
