@@ -1,6 +1,6 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/lightdm/lightdm-1.10.3.ebuild,v 1.1 2014/11/08 13:50:08 hwoarang Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/lightdm/lightdm-1.10.3.ebuild,v 1.2 2014/11/08 20:01:18 hwoarang Exp $
 
 EAPI=5
 inherit autotools eutils pam readme.gentoo systemd
@@ -14,8 +14,8 @@ SRC_URI="http://launchpad.net/${PN}/${TRUNK_VERSION}/${PV}/+download/${P}.tar.xz
 LICENSE="GPL-3 LGPL-3"
 SLOT="0"
 KEYWORDS="~amd64 ~arm ~ppc ~x86"
-IUSE="+gtk +introspection kde qt4 razor"
-REQUIRED_USE="|| ( gtk kde razor )"
+IUSE="+gtk +introspection kde qt4"
+REQUIRED_USE="|| ( gtk kde )"
 
 COMMON_DEPEND=">=dev-libs/glib-2.32.3:2
 	dev-libs/libxml2
@@ -38,8 +38,7 @@ DEPEND="${COMMON_DEPEND}
 	sys-devel/gettext
 	virtual/pkgconfig"
 PDEPEND="gtk? ( x11-misc/lightdm-gtk-greeter )
-	kde? ( x11-misc/lightdm-kde )
-	razor? ( razorqt-base/razorqt-lightdm-greeter )"
+	kde? ( x11-misc/lightdm-kde )"
 
 DOCS=( NEWS )
 RESTRICT="test"
