@@ -1,6 +1,11 @@
 # ChangeLog for x11-misc/lightdm
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/lightdm/ChangeLog,v 1.95 2014/11/08 13:50:08 hwoarang Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/lightdm/ChangeLog,v 1.96 2014/11/08 20:01:18 hwoarang Exp $
+
+  08 Nov 2014; Markos Chandras <hwoarang@gentoo.org> lightdm-1.10.3.ebuild,
+  lightdm-1.11.9.ebuild, lightdm-1.12.1.ebuild:
+  Drop razor useflag since it's going to be removed from the tree in favor of
+  lxqt. Bug #528660
 
 *lightdm-1.10.3 (08 Nov 2014)
 *lightdm-1.12.1 (08 Nov 2014)
